force-app/main/default/objects/OpportunityProcessTask__c/OpportunityProcessTask__c.object-meta.xml
<CustomObject>
    <description>Junction Object between Opportunity and ProcessTask</description>
    <label>Opportunity Process Task</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>OpportunityProcessTask Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Process Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>