force-app/main/default/objects/OpportunityProcessTask__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description
    >Opportunity that is the Parent in the Master Detail Relationship side of this Junction Object between Opportunity and ProcessTask</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>OpportunityProcessTasks</relationshipLabel>
    <relationshipName>OpportunityProcessTasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>