force-app/main/default/objects/OpportunityProcessTask__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <formula>ProcessTask__r.Process__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process</label>
    <type>Text</type>
</CustomField>