force-app/main/default/objects/OpportunityProcessTask__c/fields/ProcessTask__c.field-meta.xml
<CustomField>
    <fullName>ProcessTask__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Process Task related to this Junction Object between Opportunity and Process Task</description>
    <label>Process Task</label>
    <referenceTo>ProcessTask__c</referenceTo>
    <relationshipName>OpportunityProcessTasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>