force-app/main/default/objects/OpportunityProcessTask__c/fields/SequentialOrder__c.field-meta.xml
<CustomField>
    <fullName>SequentialOrder__c</fullName>
    <formula>ProcessTask__r.SequentialOrder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequential Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>