force-app/main/default/objects/OpportunityProcessTask__c/fields/StepName__c.field-meta.xml
<CustomField>
    <fullName>StepName__c</fullName>
    <formula>ProcessTask__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step Name</label>
    <type>Text</type>
</CustomField>